--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 uvicorn==0.24.0.post1
 fastapi==0.104.1
-pydantic==2.5.1
-SQLAlchemy==2.0.23
-alembic==1.12.1
-psycopg2==2.9.9
+pydantic==2.5.0
+SQLAlchemy==1.4.50
+aiosqlite==0.19.0
+databases==0.8.0
