--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-uvicorn==0.24.0.post1
-fastapi==0.104.1
-pydantic==2.5.0
-SQLAlchemy==1.4.50
-aiosqlite==0.19.0
-databases==0.8.0
+alembic==1.12.0
+asyncpg==0.28.0
+psycopg==3.1.10
+psycopg-binary==3.1.10
+sqlalchemy==2.0.20
+fastapi==0.103.1
+pydantic==2.3.0
+pydantic-settings==2.0.3
+uvicorn==0.23.2
