--- a/parsing_application/Dockerfile
+++ b/parsing_application/Dockerfile
@@ -10,6 +10,6 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
-RUN chmod a+x docker_script.sh
+RUN alembic upgrade head
 
-#CMD gunicorn main:app --workers 4 --worker-class uvicorn.workers.UvicornWorker --bind=0.0.0.0:8000
+CMD gunicorn main:app --workers 1 --worker-class uvicorn.workers.UvicornWorker --bind=0.0.0.0:8000
