--- a/parsing_application/docker-compose.yml
+++ b/parsing_application/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     command: -p 5432
     expose:
       - 5432
+    volumes:
+      - /var/lib/postgresql/14/main:/var/lib/postgresql/14/main
     env_file:
       - .env
 
